# physik

./: .gitignore  CMakeLists.txt  README.md  ThreadPool.h  main.cpp  settings.h  vcpkg.json
include/: ThreadPool.h  constants.h  controlpanel.h  object.h  rendering.h  settings.h  simulationutils.h  spatialgrid.h  vector2.h
src/: controlpanel.cpp  object.cpp  rendering.cpp  settings.cpp  simulationutils.cpp  spatialgrid.cpp
